# minco

./: Dockerfile  Makefile  README.md  pull_request_template.md  pyproject.toml  setup.cfg
conf/base/: catalog_clusterization.yml  catalog_global.yml  parameters_global.yml  parameters_model_clusterization.yml
conf/base/data_engineering/: catalog_curation.yml  catalog_features.yml  catalog_features_espesadores.yml  catalog_intermediate.yml  catalog_primary.yml  catalog_quality.yml  catalog_raw.yml  parameters_curation.yml  parameters_features.yml  parameters_features_A0.yml  parameters_features_A1.yml  parameters_features_A2.yml  parameters_features_espesadores.yml  parameters_intermediate.yml  parameters_primary.yml  parameters_quality.yml
conf/base/data_science/: catalog_esp.yml  catalog_esp_crisis_hidrica.yml  catalog_esp_normalidad_hidrica.yml  catalog_favi.yml  catalog_line_A1.yml  catalog_line_A2.yml  catalog_line_sag.yml  parameters_favi.yml  parameters_model_input.yml  parameters_train_model.yml
conf/base/optimization/: catalog_optimization_A1.yml  catalog_optimization_A2.yml  catalog_optimization_esp.yml  catalog_optimization_sag.yml  parameters_recommendation.yml
conf/cloud_recommend_dev/: catalog.yml  parameters.yml
conf/cloud_recommend_mvp/: catalog.yml
data/01_raw/: revestimiento.csv
data/02_intermediate/: concentrated_data.csv  ks_test_sum.csv  null_data.csv  stat_na.csv
data/08_reporting/data_quality/: data_qa_table.xlsx
data/09_data_dictionaries/: tag_dict_master.csv  tag_dict_master_copia_jul.csv  td.pkl
devops/deploy-gda/: clone_and_install.sh  deployment-gda.sh
docs/source/: conf.py  index.rst  modules.rst  project_clisham.rst
notebooks/: Untitled.ipynb  exploracion-resultados.ipynb  model_notebook.ipynb  model_utils.py
src/: hooks.py  requirements.txt  setup.py
src/project_clisham/: __init__.py  pipeline.py  run.py
src/project_clisham/optimus_core/: utils.py
src/project_clisham/optimus_core/data_validation/: README.md  adtk_custom_expectation.py  great_expectations_utils.py  sample_ge_notebook.ipynb
src/project_clisham/optimus_core/model_helpers/: metrics.py  performance.py  shap.py  tuning.py
src/project_clisham/optimus_core/reporting_html/: README.ipynb  __init__.py  nodes.py  (+4 more)
src/tests/: test_run.py
(+64 files in other folders)
